# ket

./: .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint.json  .readthedocs.yml  AppImageBuilder.yml.in  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  MANIFEST  MANIFEST.in  README.md  REUSE.toml  ket.desktop  makefile  pyproject.toml  requirements_amazon.txt  requirements_dev.txt  setup.cfg  setup.py  snapcraft.yaml  wheelrepair.sh
.devcontainer/: devcontainer.json
.github/workflows/: macos.yml  wheel.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  ket.rst  ket_api.rst  libket.rst  license.rst  quick_start.rst  references.rst
examples/: bell.ket  bell.py  bell_amazon_braket.py  bell_ibm.py  deutsch.ket  deutsch.kqasm  deutsch.py  falqon.py  gates_trial.py  grover.ket  grover.py  grover_R2pi.py  grover_gpu.py  maxcut.ket  maxcut.py  optimize.py  phase.kqams  phase_estimation.ket  phase_estimation.kqasm  phase_estimation.py  qaoa_maxcut.ket  qft.ket  random.ket  random.kqasm  random_bits.py  shor.ket  shor.py  shor15.ket  shor15.kqasm  shor15dump.ket  shor15dump.kqasm  shor_dump.ket  shor_dump.kqasm  shor_make_quantum.ket  steane_code.ket  teleport.ket  teleport.kqasm  teleport.py  test.ket  test.kqasm  (+4 more)
include/: pyket.hpp
ket/: __init__.py  __main__.py  __version__.py  base.py  code_ket.py  import_ket.py  kbw.py  ket.py  ketpp.py  lib.py  libket.py  plugins.py  process.py
ket/clib/: kbw.py  libket.py  wrapper.py
ket/gates/: __init__.py  base_gates.py  more.py  quantum_gate.py
ket/import_ket/: __init__.py
ket/lib/: __init__.py  state.py
ket/lib/state/: __init__.py
ket/plugins/: __init__.py
ket/preprocessor/: __init__.py  statements.py  transformer.py
ket/standard/: __init__.py  adj.py  ctrl.py
ket/types/: __init__.py  dump.py  future.py  quant.py
ket/util/: __init__.py
keti/: __main__.py  import_ket.py  ketpp.py  pp.py
libs/: Cargo.toml
pp/: ketpp.py
scripts/: make_wheel.dockerfile  make_wheel.sh  make_wheel_aarch64.dockerfile  make_wheel_aarch64.sh  make_wheel_linux-x86_64.dockerfile  make_wheel_x86_64.dockerfile  make_wheel_x86_64.sh  wheel-linux-x86_64.dockerfile  wheel-linux-x86_64.sh  wheel-windows-x86_64.dockerfile  wheel-windows-x86_64.sh
src/: build_info.cpp  build_info.hpp  ket.i  pyket.cpp
src/ket/: __init__.py  __main__.py  amazon.py  base.py  expv.py  fermion.py  gates.py  ibm.py  import_ket.py  kbw.py  lib.py  measurement.py  npsim.py  operations.py  plugins.py  process.py  qint.py  quantumstate.py  quforge.py  quforge_ket.py  qulib.py  remote.py
src/ket/clib/: kbw.py  libket.py  wrapper.py
src/ket/clib/libket/: __init__.py  execution.py
src/ket/clib/libs/: __init__.py
src/ket/gates/: __init__.py  base_gates.py  quantum_gate.py
src/ket/ibm/: __init__.py  ibm_client.py  ibm_device.py  qiskit_builder.py  qiskit_client.py  qiskit_interface.py  test_qiskit_interface.py
src/ket/ket-ibm/: qiskit_client.py  test_qiskit_client.py
src/ket/lib/: __init__.py
src/ket/preprocessor/: __init__.py  statements.py  transformer.py
src/ket/qulib/: __init__.py  gates.py  ham.py  math.py  oracle.py  prepare.py
src/ket/standard/: __init__.py  adj.py  ctrl.py
tests/: _test_decompose.py  test_braket.py  test_decompose.py  test_fermion.py  test_gates.py  test_grover.py  test_phase_estimation.py  test_u3_gate.py  test_unitaty_gate.py
tests/amazon/: _test_amazon.ipynb  _test_amazon.py  test_amazon.py
tests/core/: test_base.py  test_gradient.py  test_measurement.py  test_qint.py  test_quantumstate.py
tests/ibm/: _test_ibm_device.py  test_ibm_device.py  test_qiskit_client.py  test_qiskit_interface.py
tests/ops/: test_expv.py  test_gates.py  test_operations.py
tests/providers/: test_amazon.py  test_ibm.py  test_npsim.py
tests/qulib/: test_algorithms.py  test_oracles.py  test_prepare.py
util/: Dockerfile  make_libs.bat  make_libs.sh  make_wheel.sh
