[metadata]
name = ket-lang
version = attr: ket.__version__
url = https://quantumket.org
project_urls =
    Source = https://gitlab.com/quantum-ket/ket
author = Evandro Chagas Ribeiro da Rosa
author_email = evandro@quantuloop.com
classifiers =
    Intended Audience :: Science/Research
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Rust
license = Apache-2.0
license_files = LICENSE.md
description = Ket quantum programming language interpreter and library
long_description = file: README.md
long_description_content_type = text/markdown
keywords = quantum computer, quantum programming, quantum simulator
platforms = linux, win32, osx

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
package_dir =
    = src
setup_requires = 
    wheel

[options.packages.find]
where = src
include = ket*

[options.entry_points]
console_scripts =
    ket =  ket.__main__:__ket__

[flake8]
ignore = E501
per-file-ignores =
    src/ket/__init__.py: F401, F403